[gd_scene load_steps=4 format=3 uid="uid://blxn1hhtmam2d"]

[ext_resource type="Script" path="res://Scripts/draggable_filter.gd" id="1_pqjom"]
[ext_resource type="Texture2D" uid="uid://bo4kxgbq7723j" path="res://2D Assets/funnels/blueFunnelPinkRectangle.png" id="2_0nah2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8kq8"]
size = Vector2(137.666, 158)

[node name="Draggable Filter" type="Area2D"]
position = Vector2(288.333, 205)
script = ExtResource("1_pqjom")
filterColor = "BluePinkRectangle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11.5002, 13)
shape = SubResource("RectangleShape2D_e8kq8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(11.167, 13.4468)
scale = Vector2(0.625, 0.597881)
texture = ExtResource("2_0nah2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
